add raw proto processiong

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ thiserror = "1"
 log = "0.4"
 env_logger = "0.11"
 chrono = { version = "0.4" }
+protobuf = "3"
+# protobuf-json-mapping was used for a prior approach; keep for now but unused
+protobuf-json-mapping = "3"
+tauri-plugin-dialog = "2"
+protobuf-parse = "3"
+protoc-bin-vendored = "3"
+tempfile = "3"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
