--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14-arm64]
+        include:
+          - os: ubuntu-latest
+            tauri_args: ""
+          - os: macos-14-arm64
+            tauri_args: "--target universal-apple-darwin"
 
     steps:
       - name: Checkout
@@ -50,7 +54,6 @@ jobs:
             echo "VERSION is empty; aborting" >&2
             exit 1
           fi
-          # Validate semver-like pattern (basic)
           if ! echo "${VERSION}" | grep -Eq '^[0-9]+\.[0-9]+\.[0-9]+'; then
             echo "Tag '${TAG}' does not contain a semver prefix like X.Y.Z" >&2
             exit 1
@@ -59,14 +62,12 @@ jobs:
           node <<'NODE'
           const fs = require('fs');
           const version = process.env.VERSION;
-          // Update tauri.conf.json
           const tauriPath = 'tauri.conf.json';
           let tj = JSON.parse(fs.readFileSync(tauriPath, 'utf8'));
           tj.version = version;
           fs.writeFileSync(tauriPath, JSON.stringify(tj, null, 2) + '\n');
           console.log(`Updated ${tauriPath} to version ${version}`);
 
-          // Update Cargo.toml in [package] section only
           const cargoPath = 'Cargo.toml';
           let toml = fs.readFileSync(cargoPath, 'utf8');
           const pkgStart = toml.indexOf('[package]');
@@ -82,7 +83,6 @@ jobs:
           if (/^([\s\S]*?)(\nversion\s*=\s*"[^"]+")/m.test(section)) {
             section = section.replace(/(\n)version\s*=\s*"[^"]+"/, `$1version = "${version}"`);
           } else {
-            // Insert version under the [package] header
             section = section.replace(/\[package\][^\n]*\n/, (m) => m + `version = "${version}"\n`);
           }
           const after = toml.slice(sectionEnd);
@@ -109,16 +109,19 @@ jobs:
             libzstd-dev \
             librdkafka-dev \
             cmake
-          # WebKitGTK: try 4.1 first (Ubuntu 24.04+), fallback to 4.0 on older images
           sudo apt-get install -y libwebkit2gtk-4.1-dev || sudo apt-get install -y libwebkit2gtk-4.0-dev
 
-      - name: Setup Rust
+      - name: Setup Rust (Linux)
+        if: runner.os == 'Linux'
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Setup Rust (macOS universal)
+        if: runner.os == 'macOS'
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: |
             aarch64-apple-darwin
-            x86_64-apple-darwin 
-
+            x86_64-apple-darwin
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -137,6 +140,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
-          args: --target universal-apple-darwi
+          args: ${{ matrix.tauri_args }}
           releaseDraft: false
           prerelease: false
