--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           prerelease: false
 
   build:
-    name: Build and Upload (${{ matrix.os }})
+    name: Build and Upload (${{ matrix.label }})
     needs: create-release
     runs-on: ${{ matrix.os }}
     strategy:
@@ -35,15 +35,24 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
+            label: linux-x64
             tauri_args: ""
+            rust_targets: ""
           - os: macos-14-arm64
-            tauri_args: "--target universal-apple-darwin"
+            label: macos-arm64
+            tauri_args: "--target aarch64-apple-darwin"
+            rust_targets: "aarch64-apple-darwin"
+          - os: macos-13
+            label: macos-x86_64
+            tauri_args: "--target x86_64-apple-darwin"
+            rust_targets: "x86_64-apple-darwin"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Update versions from tag
+        shell: bash
         run: |
           TAG="${GITHUB_REF_NAME:-${{ github.ref_name }}}"
           VERSION="${TAG#v}"
@@ -115,13 +124,11 @@ jobs:
         if: runner.os == 'Linux'
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Setup Rust (macOS universal)
+      - name: Setup Rust (macOS)
         if: runner.os == 'macOS'
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: |
-            aarch64-apple-darwin
-            x86_64-apple-darwin
+          targets: ${{ matrix.rust_targets }}
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -136,10 +143,14 @@ jobs:
 
       - name: Build and upload with Tauri
         uses: tauri-apps/tauri-action@v0
+        timeout-minutes: 60
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CARGO_TERM_COLOR: always
+          RUST_BACKTRACE: 1
+          CARGO_INCREMENTAL: 0
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
-          args: ${{ matrix.tauri_args }}
+          args: "${{ matrix.tauri_args }} --verbose"
           releaseDraft: false
           prerelease: false
