--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ protobuf = "3"
 protobuf-json-mapping = "3"
 tauri-plugin-dialog = "2"
 protobuf-parse = "3"
+once_cell = "1"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
