--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,14 @@
 name = "rkui"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 [dependencies]
 tauri = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rdkafka = { version = "0.36", features = ["ssl", "sasl"] }
+# Enable SSL by default; SASL can be enabled via the crate feature `with-sasl` to avoid requiring libsasl2 on systems where it's unavailable.
+rdkafka = { version = "0.36", features = ["ssl"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
 anyhow = "1"
 env_logger = "0.11"
@@ -18,8 +20,22 @@ tauri-plugin-dialog = "2"
 protobuf-parse = "3"
 once_cell = "1"
 
+[features]
+default = []
+# Opt-in SASL support. Build with: `cargo build --features with-sasl`
+with-sasl = ["rdkafka/sasl"]
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
+
+# Use vendored OpenSSL on Windows and macOS to avoid requiring a system OpenSSL installation
+[target.'cfg(windows)'.dependencies]
+# Build librdkafka via CMake on Windows to avoid invoking non-Windows tools during build
+rdkafka = { version = "0.36", features = ["ssl", "cmake-build"] }
+openssl-sys = { version = "0.9", features = ["vendored"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+openssl-sys = { version = "0.9", features = ["vendored"] }
 
 [profile.release]
 lto = "fat"
