--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,17 +127,6 @@ jobs:
         if: runner.os == 'Linux'
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache Rust (Linux)
-        if: runner.os == 'Linux'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-rust-${{ matrix.rust_targets }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-rust-
 
       - name: Setup Rust (macOS)
         if: runner.os == 'macOS'
@@ -145,33 +134,17 @@ jobs:
         with:
           targets: ${{ matrix.rust_targets }}
 
-      - name: Cache Rust (macOS)
-        if: runner.os == 'macOS'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-rust-${{ matrix.rust_targets }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-rust-
 
       - name: Setup Rust (Windows)
         if: runner.os == 'Windows'
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Cache Rust (Windows)
-        if: runner.os == 'Windows'
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-rust-${{ matrix.rust_targets }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-rust-
+      - name: Generate Cargo.lock
+        run: cargo generate-lockfile
+
+      - name: Cache Rust
+        uses: swatinem/rust-cache@v2
+
 
       - name: Prepare vcpkg (Windows)
         if: runner.os == 'Windows'
